versions/0.9.1/_sources/refs/_aws-cdk_aws-sam.rst.txt
.. @jsii-pacmak:meta@ {"fingerprint":"4A98ajiLDVqYNQCpa/qgoz2lkpSqR3+uE2zga1O7shE="}

@aws-cdk/aws-sam
================

.. tabs::

   .. group-tab:: C#

      View in `Nuget <https://www.nuget.org/packages/Amazon.CDK.AWS.SAM/0.9.1>`_

      **csproj**:

      .. code-block:: xml

         <PackageReference Include="Amazon.CDK.AWS.SAM" Version="0.9.1" />

      **dotnet**:

      .. code-block:: console

         dotnet add package Amazon.CDK.AWS.SAM --version 0.9.1

      **packages.config**:

      .. code-block:: xml

         <package id="Amazon.CDK.AWS.SAM" version="0.9.1" />


   .. group-tab:: Java

      View in `Maven Central <https://repo1.maven.org/maven2/software/amazon/awscdk/sam/0.9.1/>`_

      **Apache Buildr**:

      .. code-block:: none

         'software.amazon.awscdk:sam:jar:0.9.1'

      **Apache Ivy**:

      .. code-block:: xml

         <dependency groupId="software.amazon.awscdk" name="sam" rev="0.9.1"/>

      **Apache Maven**:

      .. code-block:: xml

         <dependency>
           <groupId>software.amazon.awscdk</groupId>
           <artifactId>sam</artifactId>
           <version>0.9.1</version>
         </dependency>

      **Gradle / Grails**:

      .. code-block:: none

         compile 'software.amazon.awscdk:sam:0.9.1'

      **Groovy Grape**:

      .. code-block:: none

         @Grapes(
         @Grab(group='software.amazon.awscdk', module='sam', version='0.9.1')
         )


   .. group-tab:: JavaScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-sam/v/0.9.1>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-sam@0.9.1

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-sam": "^0.9.1"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-sam@0.9.1


   .. group-tab:: TypeScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-sam/v/0.9.1>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-sam@0.9.1

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-sam": "^0.9.1"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-sam@0.9.1



.. mdinclude:: ./__aws-cdk_aws-sam.README.md

Reference
---------

.. py:module:: @aws-cdk/aws-sam

ApiName
^^^^^^^

.. py:class:: ApiName(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.SAM;

      .. code-tab:: java

         import software.amazon.awscdk.services.sam.ApiName;

      .. code-tab:: javascript

         const { ApiName } = require('@aws-cdk/aws-sam');

      .. code-tab:: typescript

         import { ApiName } from '@aws-cdk/aws-sam';



   :extends: :py:class:`@aws-cdk/cdk.CloudFormationToken`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined

FunctionName
^^^^^^^^^^^^

.. py:class:: FunctionName(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.SAM;

      .. code-tab:: java

         import software.amazon.awscdk.services.sam.FunctionName;

      .. code-tab:: javascript

         const { FunctionName } = require('@aws-cdk/aws-sam');

      .. code-tab:: typescript

         import { FunctionName } from '@aws-cdk/aws-sam';



   :extends: :py:class:`@aws-cdk/cdk.CloudFormationToken`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined

SimpleTableName
^^^^^^^^^^^^^^^

.. py:class:: SimpleTableName(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.SAM;

      .. code-tab:: java

         import software.amazon.awscdk.services.sam.SimpleTableName;

      .. code-tab:: javascript

         const { SimpleTableName } = require('@aws-cdk/aws-sam');

      .. code-tab:: typescript

         import { SimpleTableName } from '@aws-cdk/aws-sam';



   :extends: :py:class:`@aws-cdk/cdk.CloudFormationToken`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined


cloudformation
^^^^^^^^^^^^^^
.. py:module:: @aws-cdk/aws-sam.cloudformation

ApiResource
~~~~~~~~~~~

.. py:class:: ApiResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.SAM;

      .. code-tab:: java

         import software.amazon.awscdk.services.sam.cloudformation.ApiResource;

      .. code-tab:: javascript

         const { cloudformation.ApiResource } = require('@aws-cdk/aws-sam');

      .. code-tab:: typescript

         import { cloudformation.ApiResource } from '@aws-cdk/aws-sam';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``ApiResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``ApiResource``
   :type properties: :py:class:`~@aws-cdk/aws-sam.cloudformation.ApiResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: string => any


   .. py:attribute:: requiredTransform

      The ``Transform`` a template must use in order to use this resource


      :type: string *(readonly)* *(static)*


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: ref

      :type: :py:class:`~@aws-cdk/aws-sam.ApiName` *(readonly)*

   .. py:class:: S3LocationProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.SAM;

         .. code-tab:: java

            import software.amazon.awscdk.services.sam.cloudformation.ApiResource.S3LocationProperty;

         .. code-tab:: javascript

            // cloudformation.ApiResource.S3LocationProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ApiResource.S3LocationProperty } from '@aws-cdk/aws-sam';





      .. py:attribute:: bucket

         ``ApiResource.S3LocationProperty.Bucket``
         https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` *(abstract)*


      .. py:attribute:: key

         ``ApiResource.S3LocationProperty.Key``
         https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` *(abstract)*


      .. py:attribute:: version

         ``ApiResource.S3LocationProperty.Version``
         https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction


         :type: number or :py:class:`@aws-cdk/cdk.CloudFormationToken` *(abstract)*



ApiResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ApiResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.SAM;

      .. code-tab:: java

         import software.amazon.awscdk.services.sam.cloudformation.ApiResourceProps;

      .. code-tab:: javascript

         // cloudformation.ApiResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.ApiResourceProps } from '@aws-cdk/aws-sam';





   .. py:attribute:: stageName

      ``AWS::Serverless::Api.StageName``
      https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessapi


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` *(abstract)*


   .. py:attribute:: apiName

      ``AWS::Serverless::Api.Name``
      https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessapi


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined *(abstract)*


   .. py:attribute:: cacheClusterEnabled

      ``AWS::Serverless::Api.CacheClusterEnabled``
      https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessapi


      :type: boolean or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined *(abstract)*


   .. py:attribute:: cacheClusterSize

      ``AWS::Serverless::Api.CacheClusterSize``
      https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessapi


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined *(abstract)*


   .. py:attribute:: definitionBody

      ``AWS::Serverless::Api.DefinitionBody``
      https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessapi


      :type: json or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined *(abstract)*


   .. py:attribute:: definitionUri

      ``AWS::Serverless::Api.DefinitionUri``
      https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessapi


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-sam.cloudformation.ApiResource.S3LocationProperty` or undefined *(abstract)*


   .. py:attribute:: methodSettings

      ``AWS::Serverless::Api.MethodSettings``
      https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessapi


      :type: json or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined *(abstract)*


   .. py:attribute:: variables

      ``AWS::Serverless::Api.Variables``
      https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessapi


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or string => (string or :py:class:`@aws-cdk/cdk.CloudFormationToken`) or undefined *(abstract)*


FunctionResource
~~~~~~~~~~~~~~~~

.. py:class:: FunctionResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.SAM;

      .. code-tab:: java

         import software.amazon.awscdk.services.sam.cloudformation.FunctionResource;

      .. code-tab:: javascript

         const { cloudformation.FunctionResource } = require('@aws-cdk/aws-sam');

      .. code-tab:: typescript

         import { cloudformation.FunctionResource } from '@aws-cdk/aws-sam';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``FunctionResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``FunctionResource``
   :type properties: :py:class:`~@aws-cdk/aws-sam.cloudformation.FunctionResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: string => any


   .. py:attribute:: requiredTransform

      The ``Transform`` a template must use in order to use this resource


      :type: string *(readonly)* *(static)*


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: ref

      :type: :py:class:`~@aws-cdk/aws-sam.FunctionName` *(readonly)*

   .. py:class:: AlexaSkillEventProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.SAM;

         .. code-tab:: java

            import software.amazon.awscdk.services.sam.cloudformation.FunctionResource.AlexaSkillEventProperty;

         .. code-tab:: javascript

            // cloudformation.FunctionResource.AlexaSkillEventProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.FunctionResource.AlexaSkillEventProperty } from '@aws-cdk/aws-sam';





      .. py:attribute:: variables

         ``FunctionResource.AlexaSkillEventProperty.Variables``
         https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#alexaskill


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or string => (string or :py:class:`@aws-cdk/cdk.CloudFormationToken`) or undefined *(abstract)*


   .. py:class:: ApiEventProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.SAM;

         .. code-tab:: java

            import software.amazon.awscdk.services.sam.cloudformation.FunctionResource.ApiEventProperty;

         .. code-tab:: javascript

            // cloudformation.FunctionResource.ApiEventProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.FunctionResource.ApiEventProperty } from '@aws-cdk/aws-sam';





      .. py:attribute:: method

         ``FunctionResource.ApiEventProperty.Method``
         https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#api


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` *(abstract)*


      .. py:attribute:: path

         ``FunctionResource.ApiEventProperty.Path``
         https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#api


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` *(abstract)*


      .. py:attribute:: restApiId

         ``FunctionResource.ApiEventProperty.RestApiId``
         https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#api


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined *(abstract)*


   .. py:class:: CloudWatchEventEventProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.SAM;

         .. code-tab:: java

            import software.amazon.awscdk.services.sam.cloudformation.FunctionResource.CloudWatchEventEventProperty;

         .. code-tab:: javascript

            // cloudformation.FunctionResource.CloudWatchEventEventProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.FunctionResource.CloudWatchEventEventProperty } from '@aws-cdk/aws-sam';





      .. py:attribute:: pattern

         ``FunctionResource.CloudWatchEventEventProperty.Pattern``
         http://docs.aws.amazon.com/AmazonCloudWatch/latest/events/CloudWatchEventsandEventPatterns.html


         :type: json or :py:class:`@aws-cdk/cdk.CloudFormationToken` *(abstract)*


      .. py:attribute:: input

         ``FunctionResource.CloudWatchEventEventProperty.Input``
         https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#cloudwatchevent


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined *(abstract)*


      .. py:attribute:: inputPath

         ``FunctionResource.CloudWatchEventEventProperty.InputPath``
         https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#cloudwatchevent


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined *(abstract)*


   .. py:class:: DeadLetterQueueProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.SAM;

         .. code-tab:: java

            import software.amazon.awscdk.services.sam.cloudformation.FunctionResource.DeadLetterQueueProperty;

         .. code-tab:: javascript

            // cloudformation.FunctionResource.DeadLetterQueueProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.FunctionResource.DeadLetterQueueProperty } from '@aws-cdk/aws-sam';





      .. py:attribute:: targetArn

         ``FunctionResource.DeadLetterQueueProperty.TargetArn``
         https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` *(abstract)*


      .. py:attribute:: type

         ``FunctionResource.DeadLetterQueueProperty.Type``
         https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` *(abstract)*


   .. py:class:: DeploymentPreferenceProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.SAM;

         .. code-tab:: java

            import software.amazon.awscdk.services.sam.cloudformation.FunctionResource.DeploymentPreferenceProperty;

         .. code-tab:: javascript

            // cloudformation.FunctionResource.DeploymentPreferenceProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.FunctionResource.DeploymentPreferenceProperty } from '@aws-cdk/aws-sam';





      .. py:attribute:: enabled

         ``FunctionResource.DeploymentPreferenceProperty.Enabled``
         https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#deploymentpreference-object


         :type: boolean or :py:class:`@aws-cdk/cdk.CloudFormationToken` *(abstract)*


      .. py:attribute:: type

         ``FunctionResource.DeploymentPreferenceProperty.Type``
         https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#deploymentpreference-object


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` *(abstract)*


      .. py:attribute:: alarms

         ``FunctionResource.DeploymentPreferenceProperty.Alarms``
         https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#deploymentpreference-object


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (string or :py:class:`@aws-cdk/cdk.CloudFormationToken`)[] or undefined *(abstract)*


      .. py:attribute:: hooks

         ``FunctionResource.DeploymentPreferenceProperty.Hooks``
         https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#deploymentpreference-object


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (string or :py:class:`@aws-cdk/cdk.CloudFormationToken`)[] or undefined *(abstract)*


   .. py:class:: DynamoDBEventProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.SAM;

         .. code-tab:: java

            import software.amazon.awscdk.services.sam.cloudformation.FunctionResource.DynamoDBEventProperty;

         .. code-tab:: javascript

            // cloudformation.FunctionResource.DynamoDBEventProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.FunctionResource.DynamoDBEventProperty } from '@aws-cdk/aws-sam';





      .. py:attribute:: batchSize

         ``FunctionResource.DynamoDBEventProperty.BatchSize``
         https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#dynamodb


         :type: number or :py:class:`@aws-cdk/cdk.CloudFormationToken` *(abstract)*


      .. py:attribute:: startingPosition

         ``FunctionResource.DynamoDBEventProperty.StartingPosition``
         https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#dynamodb


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` *(abstract)*


      .. py:attribute:: stream

         ``FunctionResource.DynamoDBEventProperty.Stream``
         https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#dynamodb


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` *(abstract)*


   .. py:class:: EventSourceProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.SAM;

         .. code-tab:: java

            import software.amazon.awscdk.services.sam.cloudformation.FunctionResource.EventSourceProperty;

         .. code-tab:: javascript

            // cloudformation.FunctionResource.EventSourceProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.FunctionResource.EventSourceProperty } from '@aws-cdk/aws-sam';





      .. py:attribute:: properties

         ``FunctionResource.EventSourceProperty.Properties``
         https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#event-source-types


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-sam.cloudformation.FunctionResource.AlexaSkillEventProperty` or :py:class:`~@aws-cdk/aws-sam.cloudformation.FunctionResource.ApiEventProperty` or :py:class:`~@aws-cdk/aws-sam.cloudformation.FunctionResource.CloudWatchEventEventProperty` or :py:class:`~@aws-cdk/aws-sam.cloudformation.FunctionResource.DynamoDBEventProperty` or :py:class:`~@aws-cdk/aws-sam.cloudformation.FunctionResource.S3EventProperty` or :py:class:`~@aws-cdk/aws-sam.cloudformation.FunctionResource.SNSEventProperty` or :py:class:`~@aws-cdk/aws-sam.cloudformation.FunctionResource.SQSEventProperty` or :py:class:`~@aws-cdk/aws-sam.cloudformation.FunctionResource.KinesisEventProperty` or :py:class:`~@aws-cdk/aws-sam.cloudformation.FunctionResource.ScheduleEventProperty` or :py:class:`~@aws-cdk/aws-sam.cloudformation.FunctionResource.IoTRuleEventProperty` *(abstract)*


      .. py:attribute:: type

         ``FunctionResource.EventSourceProperty.Type``
         https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#event-source-object


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` *(abstract)*


   .. py:class:: FunctionEnvironmentProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.SAM;

         .. code-tab:: java

            import software.amazon.awscdk.services.sam.cloudformation.FunctionResource.FunctionEnvironmentProperty;

         .. code-tab:: javascript

            // cloudformation.FunctionResource.FunctionEnvironmentProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.FunctionResource.FunctionEnvironmentProperty } from '@aws-cdk/aws-sam';





      .. py:attribute:: variables

         ``FunctionResource.FunctionEnvironmentProperty.Variables``
         https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#environment-object


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or string => (string or :py:class:`@aws-cdk/cdk.CloudFormationToken`) *(abstract)*


   .. py:class:: IAMPolicyDocumentProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.SAM;

         .. code-tab:: java

            import software.amazon.awscdk.services.sam.cloudformation.FunctionResource.IAMPolicyDocumentProperty;

         .. code-tab:: javascript

            // cloudformation.FunctionResource.IAMPolicyDocumentProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.FunctionResource.IAMPolicyDocumentProperty } from '@aws-cdk/aws-sam';





      .. py:attribute:: statement

         ``FunctionResource.IAMPolicyDocumentProperty.Statement``
         http://docs.aws.amazon.com/IAM/latest/UserGuide/reference_policies.html


         :type: json or :py:class:`@aws-cdk/cdk.CloudFormationToken` *(abstract)*


   .. py:class:: IoTRuleEventProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.SAM;

         .. code-tab:: java

            import software.amazon.awscdk.services.sam.cloudformation.FunctionResource.IoTRuleEventProperty;

         .. code-tab:: javascript

            // cloudformation.FunctionResource.IoTRuleEventProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.FunctionResource.IoTRuleEventProperty } from '@aws-cdk/aws-sam';





      .. py:attribute:: sql

         ``FunctionResource.IoTRuleEventProperty.Sql``
         https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#iotrule


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` *(abstract)*


      .. py:attribute:: awsIotSqlVersion

         ``FunctionResource.IoTRuleEventProperty.AwsIotSqlVersion``
         https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#iotrule


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined *(abstract)*


   .. py:class:: KinesisEventProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.SAM;

         .. code-tab:: java

            import software.amazon.awscdk.services.sam.cloudformation.FunctionResource.KinesisEventProperty;

         .. code-tab:: javascript

            // cloudformation.FunctionResource.KinesisEventProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.FunctionResource.KinesisEventProperty } from '@aws-cdk/aws-sam';





      .. py:attribute:: startingPosition

         ``FunctionResource.KinesisEventProperty.StartingPosition``
         https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#kinesis


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` *(abstract)*


      .. py:attribute:: stream

         ``FunctionResource.KinesisEventProperty.Stream``
         https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#kinesis


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` *(abstract)*


      .. py:attribute:: batchSize

         ``FunctionResource.KinesisEventProperty.BatchSize``
         https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#kinesis


         :type: number or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined *(abstract)*


   .. py:class:: S3EventProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.SAM;

         .. code-tab:: java

            import software.amazon.awscdk.services.sam.cloudformation.FunctionResource.S3EventProperty;

         .. code-tab:: javascript

            // cloudformation.FunctionResource.S3EventProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.FunctionResource.S3EventProperty } from '@aws-cdk/aws-sam';





      .. py:attribute:: bucket

         ``FunctionResource.S3EventProperty.Bucket``
         https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#s3


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` *(abstract)*


      .. py:attribute:: events

         ``FunctionResource.S3EventProperty.Events``
         https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#s3


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or (string or :py:class:`@aws-cdk/cdk.CloudFormationToken`)[] *(abstract)*


      .. py:attribute:: filter

         ``FunctionResource.S3EventProperty.Filter``
         https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#s3


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-sam.cloudformation.FunctionResource.S3NotificationFilterProperty` or undefined *(abstract)*


   .. py:class:: S3LocationProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.SAM;

         .. code-tab:: java

            import software.amazon.awscdk.services.sam.cloudformation.FunctionResource.S3LocationProperty;

         .. code-tab:: javascript

            // cloudformation.FunctionResource.S3LocationProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.FunctionResource.S3LocationProperty } from '@aws-cdk/aws-sam';





      .. py:attribute:: bucket

         ``FunctionResource.S3LocationProperty.Bucket``
         https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` *(abstract)*


      .. py:attribute:: key

         ``FunctionResource.S3LocationProperty.Key``
         https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` *(abstract)*


      .. py:attribute:: version

         ``FunctionResource.S3LocationProperty.Version``
         https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction


         :type: number or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined *(abstract)*


   .. py:class:: S3NotificationFilterProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.SAM;

         .. code-tab:: java

            import software.amazon.awscdk.services.sam.cloudformation.FunctionResource.S3NotificationFilterProperty;

         .. code-tab:: javascript

            // cloudformation.FunctionResource.S3NotificationFilterProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.FunctionResource.S3NotificationFilterProperty } from '@aws-cdk/aws-sam';





      .. py:attribute:: s3Key

         ``FunctionResource.S3NotificationFilterProperty.S3Key``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-s3-bucket-notificationconfiguration-config-filter.html


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` *(abstract)*


   .. py:class:: SNSEventProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.SAM;

         .. code-tab:: java

            import software.amazon.awscdk.services.sam.cloudformation.FunctionResource.SNSEventProperty;

         .. code-tab:: javascript

            // cloudformation.FunctionResource.SNSEventProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.FunctionResource.SNSEventProperty } from '@aws-cdk/aws-sam';





      .. py:attribute:: topic

         ``FunctionResource.SNSEventProperty.Topic``
         https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#sns


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` *(abstract)*


   .. py:class:: SQSEventProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.SAM;

         .. code-tab:: java

            import software.amazon.awscdk.services.sam.cloudformation.FunctionResource.SQSEventProperty;

         .. code-tab:: javascript

            // cloudformation.FunctionResource.SQSEventProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.FunctionResource.SQSEventProperty } from '@aws-cdk/aws-sam';





      .. py:attribute:: queue

         ``FunctionResource.SQSEventProperty.Queue``
         https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#sqs


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` *(abstract)*


      .. py:attribute:: batchSize

         ``FunctionResource.SQSEventProperty.BatchSize``
         https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#sqs


         :type: number or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined *(abstract)*


   .. py:class:: ScheduleEventProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.SAM;

         .. code-tab:: java

            import software.amazon.awscdk.services.sam.cloudformation.FunctionResource.ScheduleEventProperty;

         .. code-tab:: javascript

            // cloudformation.FunctionResource.ScheduleEventProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.FunctionResource.ScheduleEventProperty } from '@aws-cdk/aws-sam';





      .. py:attribute:: schedule

         ``FunctionResource.ScheduleEventProperty.Schedule``
         https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#schedule


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` *(abstract)*


      .. py:attribute:: input

         ``FunctionResource.ScheduleEventProperty.Input``
         https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#schedule


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined *(abstract)*


   .. py:class:: VpcConfigProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.SAM;

         .. code-tab:: java

            import software.amazon.awscdk.services.sam.cloudformation.FunctionResource.VpcConfigProperty;

         .. code-tab:: javascript

            // cloudformation.FunctionResource.VpcConfigProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.FunctionResource.VpcConfigProperty } from '@aws-cdk/aws-sam';





      .. py:attribute:: securityGroupIds

         ``FunctionResource.VpcConfigProperty.SecurityGroupIds``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-lambda-function-vpcconfig.html


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (string or :py:class:`@aws-cdk/cdk.CloudFormationToken`)[] *(abstract)*


      .. py:attribute:: subnetIds

         ``FunctionResource.VpcConfigProperty.SubnetIds``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-lambda-function-vpcconfig.html


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (string or :py:class:`@aws-cdk/cdk.CloudFormationToken`)[] *(abstract)*



FunctionResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: FunctionResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.SAM;

      .. code-tab:: java

         import software.amazon.awscdk.services.sam.cloudformation.FunctionResourceProps;

      .. code-tab:: javascript

         // cloudformation.FunctionResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.FunctionResourceProps } from '@aws-cdk/aws-sam';





   .. py:attribute:: codeUri

      ``AWS::Serverless::Function.CodeUri``
      https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-sam.cloudformation.FunctionResource.S3LocationProperty` *(abstract)*


   .. py:attribute:: handler

      ``AWS::Serverless::Function.Handler``
      https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` *(abstract)*


   .. py:attribute:: runtime

      ``AWS::Serverless::Function.Runtime``
      https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` *(abstract)*


   .. py:attribute:: deadLetterQueue

      ``AWS::Serverless::Function.DeadLetterQueue``
      https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-sam.cloudformation.FunctionResource.DeadLetterQueueProperty` or undefined *(abstract)*


   .. py:attribute:: deploymentPreference

      ``AWS::Serverless::Function.DeploymentPreference``
      https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#deploymentpreference-object


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-sam.cloudformation.FunctionResource.DeploymentPreferenceProperty` or undefined *(abstract)*


   .. py:attribute:: description

      ``AWS::Serverless::Function.Description``
      https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined *(abstract)*


   .. py:attribute:: environment

      ``AWS::Serverless::Function.Environment``
      https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-sam.cloudformation.FunctionResource.FunctionEnvironmentProperty` or undefined *(abstract)*


   .. py:attribute:: events

      ``AWS::Serverless::Function.Events``
      https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or string => (:py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-sam.cloudformation.FunctionResource.EventSourceProperty`) or undefined *(abstract)*


   .. py:attribute:: functionName

      ``AWS::Serverless::Function.FunctionName``
      https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined *(abstract)*


   .. py:attribute:: kmsKeyArn

      ``AWS::Serverless::Function.KmsKeyArn``
      https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined *(abstract)*


   .. py:attribute:: memorySize

      ``AWS::Serverless::Function.MemorySize``
      https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction


      :type: number or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined *(abstract)*


   .. py:attribute:: policies

      ``AWS::Serverless::Function.Policies``
      https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-sam.cloudformation.FunctionResource.IAMPolicyDocumentProperty` or (string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-sam.cloudformation.FunctionResource.IAMPolicyDocumentProperty`)[] or undefined *(abstract)*


   .. py:attribute:: role

      ``AWS::Serverless::Function.Role``
      https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined *(abstract)*


   .. py:attribute:: tags

      ``AWS::Serverless::Function.Tags``
      https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or string => (string or :py:class:`@aws-cdk/cdk.CloudFormationToken`) or undefined *(abstract)*


   .. py:attribute:: timeout

      ``AWS::Serverless::Function.Timeout``
      https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction


      :type: number or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined *(abstract)*


   .. py:attribute:: tracing

      ``AWS::Serverless::Function.Tracing``
      https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined *(abstract)*


   .. py:attribute:: vpcConfig

      ``AWS::Serverless::Function.VpcConfig``
      https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-sam.cloudformation.FunctionResource.VpcConfigProperty` or undefined *(abstract)*


SimpleTableResource
~~~~~~~~~~~~~~~~~~~

.. py:class:: SimpleTableResource(parent, name, [properties])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.SAM;

      .. code-tab:: java

         import software.amazon.awscdk.services.sam.cloudformation.SimpleTableResource;

      .. code-tab:: javascript

         const { cloudformation.SimpleTableResource } = require('@aws-cdk/aws-sam');

      .. code-tab:: typescript

         import { cloudformation.SimpleTableResource } from '@aws-cdk/aws-sam';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``SimpleTableResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``SimpleTableResource``
   :type properties: :py:class:`~@aws-cdk/aws-sam.cloudformation.SimpleTableResourceProps` or undefined

   .. py:method:: renderProperties() -> string => any

      :rtype: string => any


   .. py:attribute:: requiredTransform

      The ``Transform`` a template must use in order to use this resource


      :type: string *(readonly)* *(static)*


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: ref

      :type: :py:class:`~@aws-cdk/aws-sam.SimpleTableName` *(readonly)*

   .. py:class:: PrimaryKeyProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.SAM;

         .. code-tab:: java

            import software.amazon.awscdk.services.sam.cloudformation.SimpleTableResource.PrimaryKeyProperty;

         .. code-tab:: javascript

            // cloudformation.SimpleTableResource.PrimaryKeyProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.SimpleTableResource.PrimaryKeyProperty } from '@aws-cdk/aws-sam';





      .. py:attribute:: type

         ``SimpleTableResource.PrimaryKeyProperty.Type``
         https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#primary-key-object


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` *(abstract)*


      .. py:attribute:: name

         ``SimpleTableResource.PrimaryKeyProperty.Name``
         https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#primary-key-object


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined *(abstract)*


   .. py:class:: ProvisionedThroughputProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.SAM;

         .. code-tab:: java

            import software.amazon.awscdk.services.sam.cloudformation.SimpleTableResource.ProvisionedThroughputProperty;

         .. code-tab:: javascript

            // cloudformation.SimpleTableResource.ProvisionedThroughputProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.SimpleTableResource.ProvisionedThroughputProperty } from '@aws-cdk/aws-sam';





      .. py:attribute:: writeCapacityUnits

         ``SimpleTableResource.ProvisionedThroughputProperty.WriteCapacityUnits``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-dynamodb-provisionedthroughput.html


         :type: number or :py:class:`@aws-cdk/cdk.CloudFormationToken` *(abstract)*


      .. py:attribute:: readCapacityUnits

         ``SimpleTableResource.ProvisionedThroughputProperty.ReadCapacityUnits``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-dynamodb-provisionedthroughput.html


         :type: number or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined *(abstract)*



SimpleTableResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: SimpleTableResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.SAM;

      .. code-tab:: java

         import software.amazon.awscdk.services.sam.cloudformation.SimpleTableResourceProps;

      .. code-tab:: javascript

         // cloudformation.SimpleTableResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.SimpleTableResourceProps } from '@aws-cdk/aws-sam';





   .. py:attribute:: primaryKey

      ``AWS::Serverless::SimpleTable.PrimaryKey``
      https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#primary-key-object


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-sam.cloudformation.SimpleTableResource.PrimaryKeyProperty` or undefined *(abstract)*


   .. py:attribute:: provisionedThroughput

      ``AWS::Serverless::SimpleTable.ProvisionedThroughput``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-dynamodb-provisionedthroughput.html


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-sam.cloudformation.SimpleTableResource.ProvisionedThroughputProperty` or undefined *(abstract)*



.. py:currentmodule:: @aws-cdk/aws-sam

